HSEARCH-334 Applied Davide's patch
git-svn-id: https://svn.jboss.org/repos/hibernate/search/trunk@17202 1b8cb986-b30d-0410-93ca-fae66ebed9b2